@@ -11,6 +11,13 @@
 #forbid_utf
 #newline_default lf any anycrlf
 
+/abc\Cdef/info
+Capturing subpattern count = 0
+Contains \C
+First code unit = 'a'
+Last code unit = 'f'
+Subject length lower bound = 7
+
 # Test binary zeroes in the pattern
 
 # /a\0B/ where 0 is a binary zero
